[package]
name = "todo-actix"
version = "0.1.0"
authors = ["DIPAYAN BHOWMICK <me@dipayanb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.106"
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.7"
tokio-pg-mapper-derive = "0.1.5"
deadpool-postgres = "0.5.5"
tokio-postgres = "0.5.3"
